Thu Dec 23 00:16:32 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (bsdi): use $(CC) for LDSHARED.  fixed [ruby-dev:25270]

Wed Dec 22 11:14:55 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_mode_modenum): replace O_ACCMODE with O_RDWR.
	  fixed: [ruby-dev:25273]

Wed Dec 22 08:34:32 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/sym.c (rb_dlsym_initialize): extract internal pointers after
	  all argument conversion.  fixed: [ruby-dev:25271]

Tue Dec 21 16:15:21 2004  Michael Neumann  <mneumann@ruby-lang.org>

	* lib/xmlrpc/client.rb: use "" instead of "." if prefix argument is
	  nil in proxy methods. nil is default value.

	* test/xmlrpc/test_webrick_server.rb, test/xmlrpc/webrick_testing.rb:
	  use threads instead of forking. this should fix issue #1208
	  (http://rubyforge.org/tracker/?func=detail&atid=1698&aid=1208&group_id=426).
	  removed testing of SSL enabled servlet as this hangs.

Wed Dec 22 00:05:10 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/soap/*, test/soap/*, sample/soap/authheader/*: eval cleanup.

Tue Dec 21 22:07:41 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_asn1.c (ossl_asn1_decode_all): use rb_str_new4
	  to avoid SEGV.

	* ext/openssl/ossl_asn1.c (ossl_asn1_traverse, ossl_asn1_decode,
	  ossl_asn1_decode_all): temporary value should be marked volatile.

Tue Dec 21 12:42:34 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_asn1.c (ossl_asn1_traverse, ossl_asn1_decode):
	  use rb_str_new4 to avoid SEGV. fix [ruby-dev:25261]

	* test/openssl/test_asn1.rb: add tests for OpenSSL::ASN1.

Tue Dec 21 12:10:04 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/grid.rb: rescue bug of 'grid configure' on Tcl/Tk8.3-

Mon Dec 20 22:52:29 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* added samples for the previous soap4r's commit.

Mon Dec 20 22:56:39 2004  Tanaka Akira  <akr@m17n.org>
